--- a/SharpGrammar/SharpGrammar.csproj
+++ b/SharpGrammar/SharpGrammar.csproj
@@ -5,4 +5,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="MemoryModule" />
+      <Folder Include="NumberModule" />
+    </ItemGroup>
+
 </Project>
