made whole grammar generic

--- a/DwarfNameGenerator/DwarfNameGenerator.csproj
+++ b/DwarfNameGenerator/DwarfNameGenerator.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Iteration\Iteration.csproj" />
       <ProjectReference Include="..\SharpGrammar\SharpGrammar.csproj" />
     </ItemGroup>
 
