moved projects into folders

--- a/Examples/DwarfNameGenerator/DwarfNameGenerator.csproj
+++ b/Examples/DwarfNameGenerator/DwarfNameGenerator.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
-        <RootNamespace>SharpGrammar.Memory</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SharpGrammar\SharpGrammar.csproj" />
+      <ProjectReference Include="..\..\SharpGrammar\SharpGrammar.csproj" />
     </ItemGroup>
 
 </Project>
