--- a/Modules/Counting/Counting.csproj
+++ b/Modules/Counting/Counting.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SharpGrammar\SharpGrammar.csproj" />
+      <ProjectReference Include="..\..\SharpGrammar\SharpGrammar.csproj" />
     </ItemGroup>
 
 </Project>
