--- a/Examples/AztecPantheon/AztecPantheon.csproj
+++ b/Examples/AztecPantheon/AztecPantheon.csproj
@@ -6,8 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Iteration\Iteration.csproj" />
-      <ProjectReference Include="..\SharpGrammar\SharpGrammar.csproj" />
+      <ProjectReference Include="..\..\Modules\Iteration\Iteration.csproj" />
+      <ProjectReference Include="..\..\SharpGrammar\SharpGrammar.csproj" />
     </ItemGroup>
 
 </Project>
